export class Discipline {
}
