export interface UseCase {
  id: number;
  name: string;
  description: string;
  priority: number;
}


